--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </form>
         </div>
         <div class="right">
-            <h3>History ⏱<br> and Answer</h3>
+            <h3>History ⏱<br></h3>
             <p id="box1"></p>
         </div>
     </div>
